call electron main process from renderer

--- a/src/src/app/app.component.html
+++ b/src/src/app/app.component.html
@@ -1,3 +1,4 @@
 <div>
-  <button (click)="sendNotification()">Send notification</button>
+  <button (click)="openWindow()">Open window</button>
+  <button (click)="setProgress(0.5)">Set Perc</button>
 </div>
