Travis CI Pipeline

--- a/src/src/app/app.component.html
+++ b/src/src/app/app.component.html
@@ -1,4 +1,3 @@
 <div>
-  <button (click)="openWindow()">Open window</button>
-  <button (click)="setProgress(0.5)">Set Perc</button>
+It Works
 </div>
